# Study

./: .gitignore  README.md  build.gradle  settings.gradle  versions.gradle
AgeraDemo/: build.gradle
AgeraDemo/src/main/: AndroidManifest.xml
Architecture/: build.gradle
Architecture/src/main/: AndroidManifest.xml
BitmapDemo/: build.gradle
BitmapDemo/src/main/: AndroidManifest.xml
BlackList/: build.gradle
BlackList/src/main/: AndroidManifest.xml
CameraDemo/: build.gradle
CameraDemo/src/main/: AndroidManifest.xml
MyDefineView/: build.gradle
NdkDemo/: CMakeLists.txt  build.gradle
NdkDemo/src/main/: AndroidManifest.xml
NdkDemo/src/main/cpp/: config.cpp
NdkDemo/src/main/java/com/cmos/ndkdemo/: JniTools.kt  MainActivity.kt
NdkDemo/src/main/res/layout/: activity_main.xml
NdkDemo/src/main/res/values/: strings.xml
NetDemo/: build.gradle
Rxjava2Demo/: build.gradle
StatusBarDemo/: build.gradle
ViewDemo/: build.gradle
agera/: build.gradle
agerademo/: build.gradle
app/: build.gradle
architecture/: build.gradle
bitmap/: bitmap.md  build.gradle
blacklist/: build.gradle
camera/: build.gradle
camerademo/: build.gradle
common/: build.gradle
customizeview/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
httptest/: build.gradle
kotlin/: build.gradle
library_architecture/: build.gradle
library_base/: build.gradle
ndk/: build.gradle
notificationdemo/: build.gradle
recyclerview/: build.gradle
recyclerviewdemo/: build.gradle
statusbar/: build.gradle
test/: build.gradle
webviewdemo/: build.gradle
(+462 files in other folders)
